Migrating to Java 11 and fixing unit tests.